Fix spacing issue

--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -67,7 +67,6 @@ section center img {
 }
 
 section p {
-	padding-top:0.5em;
 	text-indent:2em;
 	display:block;
 	position:relative;
